--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                 </div>
             </div>
 
-            <div class="testimonials-swiper-wrapper">
+            <div class="testimonials-swiper-wrapper mb-2">
                 <div class="swiper testimonials-swiper">
                     <div class="swiper-wrapper">
                 <!-- Testimonial 1 -->
