--- a/index.html
+++ b/index.html
@@ -162,11 +162,32 @@
                     </div>
                     
                     <h1 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Your <span class="gradient-text">24/7 Sales Machine</span> Website Starts Here
+                        Want a <span class="gradient-text">24/7 Sales Machine</span> For Your Business?
                     </h1>
                     
                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
-                        We create professional business websites that work for you even while you sleep. Get ranked <strong>#1 on Google</strong> and attract more clients from your competitors. <strong>No advance payment required</strong> — you pay only when you love our services!
+                        Are you looking for a professional business website soultion that work as a <strong>sales machine for your business 24/7</strong>. We create customized business solutions with <strong>Modern Websites, SEO, SMM and Digital Marketing</strong>.
+                    </p>
+                     <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
+                        Get <span class="gradient-text">#1 Ranking</span> on Google.
+                    </h2>
+                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                        We'd love to create a customized business website solution that meet your business needs and rank it <strong>#1 on Google to get more customers from your competitors</strong>.
+                    </p>
+                      <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
+                        Convert Your Old Website into <span class="gradient-text">Modern and Professional</span> business website.
+                    </h2>
+                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                       We can also convert your old website into a modern and professional business website that work and <strong> stays 24/7 online for your business</strong> even when you're offline and brings clients for you.
+                    </p>
+                      <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
+                        Get Started With <span class="gradient-text">No Advance Payment</span>
+                    </h2>
+                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
+                        We only need a small amount of security charges (Refundable) to filter seroius clients as we believe in our services and your satisfaction is our priority. That's why we offer <strong>no advance payment</strong>. You only pay when you love our services and results.
                     </p>
 
                     <div class="hero-features fade-in-up" style="animation-delay: 0.3s;">
