--- a/index.html
+++ b/index.html
@@ -162,28 +162,28 @@
                     </div>
                     
                     <h1 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Want a <span class="gradient-text">24/7 Sales Machine</span> For Your Business?
+                        Want a <span class="gradient-text">24/7 sales machine</span> for your business?
                     </h1>
                     
                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                         Are you looking for a professional business website soultion that work as a <strong>sales machine for your business 24/7</strong>. We create customized business solutions with <strong>Modern Websites, SEO, SMM and Digital Marketing</strong>.
                     </p>
                      <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Get <span class="gradient-text">#1 Ranking</span> on Google.
+                        Get <span class="gradient-text">#1 Ranking</span> on google.
                     </h2>
                       <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                         We'd love to create a customized business website solution that meet your business needs and rank it <strong>#1 on Google to get more customers from your competitors</strong>.
                     </p>
                       <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Convert Your Old Website into <span class="gradient-text">Modern and Professional</span> business website.
+                        Convert your old website into <span class="gradient-text">Modern Business Website</span>.
                     </h2>
                       <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
-                       We can also convert your old website into a modern and professional business website that work and <strong> stays 24/7 online for your business</strong> even when you're offline and brings clients for you.
+                       We can also convert your old website into a modern and professional business website that work and <strong> stays 24/7 online for your business</strong> even when you're offline and brings customers for you.
                     </p>
                       <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Get Started With <span class="gradient-text">No Advance Payment</span>
+                        Get started with <span class="gradient-text">No Advance Payment</span>
                     </h2>
                       <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
