--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                        We can also convert your old website into a modern and professional business website that work and <strong> stays 24/7 online for your business</strong> even when you're offline and brings customers for you.
                     </p>
                       <h2 class="hero-title fade-in-up" style="animation-delay: 0.1s;">
-                        Get started with <span class="gradient-text">No Advance Payment</span>
+                        Get started with <span class="gradient-text">No Advance Payment</span>.
                     </h2>
                       <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                      <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
