--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
       "@type": "LocalBusiness",
       "name": "Rank Master",
       "telephone": "+923369295295",
-      "email": "mailRank Master@gmail.com",
+      "email": "mailrankmaster@gmail.com",
       "url": "https://rankmaster.dilawarpro.com",
       "description": "Website development and digital marketing agency offering SEO, social media marketing, and web design",
       "image": "https://via.placeholder.com/1200x630?text=Rank Master",
@@ -105,7 +105,7 @@
       "name": "Rank Master - Digital Marketing & Web Development",
       "url": "https://rankmaster.dilawarpro.com",
       "telephone": "+923369295295",
-      "email": "mailRank Master@gmail.com",
+      "email": "mailrankmaster@gmail.com",
       "description": "Digital marketing and website development services",
       "areaServed": "Global",
       "availableLanguage": ["en"]
