--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       "@type": "LocalBusiness",
       "name": "Rank Master",
       "telephone": "+923369295295",
-      "email": "mailRank Master@gmail.com",
+      "email": "mailrankmaster@gmail.com",
       "url": "https://rankmaster.dilawarpro.com",
       "description": "Website development and digital marketing agency offering SEO, social media marketing, and web design",
       "image": "https://via.placeholder.com/1200x630?text=Rank Master",
@@ -105,7 +105,7 @@
       "name": "Rank Master - Digital Marketing & Web Development",
       "url": "https://rankmaster.dilawarpro.com",
       "telephone": "+923369295295",
-      "email": "mailRank Master@gmail.com",
+      "email": "mailrankmaster@gmail.com",
       "description": "Digital marketing and website development services",
       "areaServed": "Global",
       "availableLanguage": ["en"]
@@ -1111,8 +1111,8 @@
                         </div>
                         <h5>Email Us</h5>
                         <p class="text-muted">We'll respond within 24 hours</p>
-                        <a href="mailto:mailRank Master@gmail.com" class="contact-link">
-                            <strong>mailRank Master@gmail.com</strong>
+                        <a href="mailto:mailrankmaster@gmail.com" class="contact-link">
+                            <strong>mailrankmaster@gmail.com</strong>
                         </a>
                     </div>
                 </div>
@@ -1215,8 +1215,8 @@
                         <a href="https://wa.me/923369295295?text=Hi%20Rank Master%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services." aria-label="Chat on WhatsApp" target="_blank" rel="noopener noreferrer" class="contact-link">
                             <i class="fas fa-phone"></i> +92 336 9295 295
                         </a><br>
-                        <a href="mailto:mailRank Master@gmail.com" aria-label="Send Email" class="contact-link">
-                            <i class="fas fa-envelope"></i> mailRank Master@gmail.com
+                        <a href="mailto:mailrankmaster@gmail.com" aria-label="Send Email" class="contact-link">
+                            <i class="fas fa-envelope"></i> mailrankmaster@gmail.com
                         </a><br>
                         <i class="fas fa-globe"></i> Working Remotely Worldwide
                     </p>
