--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/rankmaster.jpg" type="image/x-icon">
-    <title>Rank Master (Formerly Marketoze) - Website Development & Digital Marketing Services | #1 Google Ranking</title>
+    <title>Rank Master - Website Development & Digital Marketing Services | #1 Google Ranking</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -1435,4 +1435,5 @@
   }
 </script>
 </body>
+
 </html>
