--- a/404.html
+++ b/404.html
@@ -4,32 +4,32 @@
     <!-- Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rank Master - Professional Website Development, SEO, Social Media Marketing, and Digital Marketing Services. Get a 24/7 Sales Machine Website Ranked #1 on Google. No Advance Payment Required!">
+    <meta name="description" content="Brandliox - Professional Website Development, SEO, Social Media Marketing, and Digital Marketing Services. Get a 24/7 Sales Machine Website Ranked #1 on Google. No Advance Payment Required!">
     <meta name="keywords" content="website development, SEO services, social media marketing, digital marketing, website design, online marketing, search engine optimization, digital agency, web development company, marketing solutions">
-    <meta name="author" content="Rank Master">
+    <meta name="author" content="Brandliox">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta property="og:title" content="Rank Master - Website Development & Digital Marketing Services">
+    <meta property="og:title" content="Brandliox - Website Development & Digital Marketing Services">
     <meta property="og:description" content="Get a professional business website that sells 24/7. Ranked #1 on Google. No advance payment required. Digital marketing solutions for your business.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rankmaster.dilawarpro.com">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630?text=Rank Master+Digital+Marketing">
+    <meta property="og:url" content="https://brandliox.dilawarpro.com">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630?text=Brandliox+Digital+Marketing">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Rank Master - Website Development & Digital Marketing">
+    <meta name="twitter:title" content="Brandliox - Website Development & Digital Marketing">
     <meta name="twitter:description" content="Professional website development and digital marketing services. Rank #1 on Google. No advance payment!">
-    <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=Rank Master">
+    <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=Brandliox">
     <meta name="theme-color" content="#6366f1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://rankmaster.dilawarpro.com/">
+    <link rel="canonical" href="https://brandliox.dilawarpro.com/">
     
     <!-- Preconnect to External Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
-    <title>Rank Master - Website Development & Digital Marketing Services | #1 Google Ranking</title>
+    <title>Brandliox - Website Development & Digital Marketing Services | #1 Google Ranking</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -58,16 +58,16 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Rank Master",
-      "alternateName": "Rank Master Digital Marketing",
-      "url": "https://rankmaster.dilawarpro.com",
-      "logo": "https://via.placeholder.com/200x100?text=Rank Master+Logo",
+      "name": "Brandliox",
+      "alternateName": "Brandliox Digital Marketing",
+      "url": "https://brandliox.dilawarpro.com",
+      "logo": "https://via.placeholder.com/200x100?text=Brandliox+Logo",
       "description": "Professional website development and digital marketing services company",
       "sameAs": [
-        "https://www.facebook.com/Rank Master",
-        "https://www.twitter.com/Rank Master",
-        "https://www.instagram.com/Rank Master",
-        "https://www.linkedin.com/company/Rank Master"
+        "https://www.facebook.com/Brandliox",
+        "https://www.twitter.com/Brandliox",
+        "https://www.instagram.com/Brandliox",
+        "https://www.linkedin.com/company/Brandliox"
       ],
       "contactPoint": {
         "@type": "ContactPoint",
@@ -87,12 +87,12 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Rank Master",
+      "name": "Brandliox",
       "telephone": "+923369295295",
-      "email": "mailrankmaster@gmail.com",
-      "url": "https://rankmaster.dilawarpro.com",
+      "email": "mailbrandliox@gmail.com",
+      "url": "https://brandliox.dilawarpro.com",
       "description": "Website development and digital marketing agency offering SEO, social media marketing, and web design",
-      "image": "https://via.placeholder.com/1200x630?text=Rank Master",
+      "image": "https://via.placeholder.com/1200x630?text=Brandliox",
       "priceRange": "$$$"
     }
     </script>
@@ -102,10 +102,10 @@
     {
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
-      "name": "Rank Master - Digital Marketing & Web Development",
-      "url": "https://rankmaster.dilawarpro.com",
+      "name": "Brandliox - Digital Marketing & Web Development",
+      "url": "https://brandliox.dilawarpro.com",
       "telephone": "+923369295295",
-      "email": "mailrankmaster@gmail.com",
+      "email": "mailbrandliox@gmail.com",
       "description": "Digital marketing and website development services",
       "areaServed": "Global",
       "availableLanguage": ["en"]
@@ -117,7 +117,7 @@
     <nav class="navbar mt-2 navbar-expand-lg navbar-dark navbar-gradient" style="position: fixed; top: 0; width: 100%; z-index: 1050; border-radius: 30px;">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold gradient-text" href="#home">
-                <i class="fas fa-rocket"></i> Rank Master
+                <i class="fas fa-rocket"></i> Brandliox
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -163,7 +163,7 @@
                     <p class="hero-subtitle fade-in-up text-muted" style="animation-delay: 0.2s;">
                        The page you are looking for does not exist. Please check the URL or return to the
                        <button class="btn btn-primary-gradient btn-lg me-3">
-                            <i class="fas fa-home"></i> <a href="https://rankmaster.dilawarpro.com" class="text-white text-decoration-none">Home Page</a>
+                            <i class="fas fa-home"></i> <a href="https://brandliox.dilawarpro.com" class="text-white text-decoration-none">Home Page</a>
                         </button>
                     </p>
 
